--- a/app/components/shared/CreatePassPhrase/CreatePassPhrase.module.css
+++ b/app/components/shared/CreatePassPhrase/CreatePassPhrase.module.css
@@ -20,6 +20,9 @@
 }
 
 .inputPrivatePassword {
-  width: 288px;
   padding-bottom: 3px;
+}
+
+.inputPrivatePassword input {
+  width: 190px;
 }
