--- a/app/components/views/PrivacyPage/Privacy/ConfigMixer/ConfigMixer.module.css
+++ b/app/components/views/PrivacyPage/Privacy/ConfigMixer/ConfigMixer.module.css
@@ -8,4 +8,6 @@
   background-color: var(--background-back-color);
   border-radius: 10px;
   margin-bottom: 50px;
+  max-width: 36em;
+  text-align: center;
 }
